// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal when using a custom node to match snapshot  1`] = `
<Portal
  node={
    <div
      class="my-node"
    >
      <p
        class="child-element"
      />
    </div>
  }
>
  <ReactPortal
    node={
      <div
        class="my-node"
      >
        <p
          class="child-element"
        />
      </div>
    }
  >
    <p
      className="child-element"
    />
  </ReactPortal>
</Portal>
`;

exports[`Portal when using default node to match snapshot  1`] = `
<ReactPortal
  node={
    <div
      class="portal"
    />
  }
>
  <p
    className="child-element"
  />
</ReactPortal>
`;
